Edit Groups and Athletes

--- a/meteor/imports/ui/components/config/athletes/left/index.html
+++ b/meteor/imports/ui/components/config/athletes/left/index.html
@@ -32,7 +32,7 @@
                             {{#with g}}
                                 <!-- Iterated links -->
                                 <li>
-                                    <a class="item-link" href="">
+                                    <a class="item-link link-open-group" href="#" data-group_index="{{@index}}">
                                         <div class="item-content">
                                             <div class="item-inner">
                                                 <div class="item-title">{{name}}</div>
