--- a/meteor/imports/ui/components/config/athletes/middle/index.html
+++ b/meteor/imports/ui/components/config/athletes/middle/index.html
@@ -15,10 +15,22 @@
                 <div class="row ">
                     <!-- Spacing -->
                     <div class="col-5"></div>
+                    <!-- Rename Group -->
+                    <div class="col-90"><p><a disabled href="#" id="btn-rename-group"
+                                              class="button button-fill color-yellow">Keine Gruppe Ausgewählt</a></p>
+                    </div>
+                    <!-- Spacing -->
+                    <div class="col-5"></div>
+                </div>
+                <div class="row ">
+                    <!-- Spacing -->
+                    <div class="col-5"></div>
                     <!-- Delete Group -->
-                    <div class="col-45"><p><a href="#" class="button button-fill color-red">Gruppe Löschen</a></p></div>
+                    <div class="col-45"><p><a disabled href="#" id="btn-delete-group"
+                                              class="button button-fill color-red">Gruppe Löschen</a></p></div>
                     <!-- Create Athlete -->
-                    <div class="col-45"><p><a href="#" class="button button-fill color-green">Neuer Athlet</a></p></div>
+                    <div class="col-45"><p><a disabled href="#" id="btn-add-athlete"
+                                              class="button button-fill color-green">Neuer Athlet</a></p></div>
                     <!-- Spacing -->
                     <div class="col-5"></div>
                 </div>
@@ -26,14 +38,20 @@
                 <div class="content-block-title">Verfügbare Athleten</div>
                 <div class="list-block">
                     <ul>
-                        <!-- Iterated Athlete Link -->
-                        <li><a href="" class="item-link">
-                            <div class="item-content">
-                                <div class="item-inner">
-                                    <div class="item-title">BEISPIEL ATHLET</div>
-                                </div>
-                            </div>
-                        </a></li>
+                        {{#each a in athletes}}
+                            {{#with a}}
+                                <!-- Iterated Athlete Link -->
+                                <li>
+                                    <a href="" class="item-link link-open-athlete" data-athlete_index="{{@index}}">
+                                        <div class="item-content">
+                                            <div class="item-inner">
+                                                <div class="item-title">{{firstName}} {{lastName}}</div>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+                            {{/with}}
+                        {{/each}}
                     </ul>
                 </div>
             </div>
