Completed Athlete config ui

--- a/meteor/imports/ui/components/config/athletes/right/index.html
+++ b/meteor/imports/ui/components/config/athletes/right/index.html
@@ -67,8 +67,8 @@
                             <div class="item-content">
                                 <div class="item-inner">
                                     <div class="item-title label">Geschlecht</div>
-                                    <div class="item-input" disabled id="pick-gender">
-                                        <select>
+                                    <div class="item-input">
+                                        <select disabled id="pick-gender">
                                             <option>Männlich</option>
                                             <option>Weiblich</option>
                                         </select>
@@ -82,8 +82,7 @@
                                 <div class="item-inner">
                                     <div class="item-title label">Startklasse</div>
                                     <div class="item-input">
-                                        <input type="text" disabled readonly placeholder="Behinderung"
-                                               id="pick-start_class">
+                                        <select disabled id="pick-start_class"></select>
                                     </div>
                                 </div>
                             </div>
