--- a/meteor/imports/ui/components/config/new_competition/main/index.html
+++ b/meteor/imports/ui/components/config/new_competition/main/index.html
@@ -31,7 +31,7 @@
                                 <div class="item-inner">
                                     <div class="item-title label">Wettkampfart</div>
                                     <div class="item-input">
-                                        <input type="text" readonly placeholder="Wettkampfart" id="pick-comp_type">
+                                        <select id="pick-comp_type"></select>
                                     </div>
                                 </div>
                             </div>
