--- a/meteor/imports/ui/components/input/index.html
+++ b/meteor/imports/ui/components/input/index.html
@@ -102,6 +102,7 @@
                            data-attempt="{{inc n}}"
                            data-athlete-id="{{athlete_id}}"
                            data-stID="{{#with metadata}}{{id}}{{/with}}"
+                           id="{{#with measurement}}{{id}}{{/with}}"
                         {{isReadOnly measurement}}
                     >
                 </div>
