Cursor gets pointer on participant Title in input can be scrolled when not enough space Curser gets pointer on fullscreen toggle

--- a/meteor/imports/ui/components/input/index.html
+++ b/meteor/imports/ui/components/input/index.html
@@ -37,7 +37,7 @@
                             <span>Teilnehmer</span>
                         </a>
                     </div>
-                    <div class="center">{{nameByID athlete_id}}</div>
+                    <div class="center" style="overflow-x: auto; overflow-y: hidden">{{nameByID athlete_id}}</div>
                     <div class="right"><a href="#" class="logout-button open-login-screen">Abmelden</a></div>
                 </div>
             </div>
