--- a/meteor/imports/ui/components/login/index.html
+++ b/meteor/imports/ui/components/login/index.html
@@ -4,9 +4,9 @@
             <div class="page">
                 <div class="page-content login-screen-content">
                     {{#if fullscreen}}
-                        <i class="f7-icons fullscreen-toggle" style="position: absolute; top: 10px; right: 15px">chevron_down</i>
+                        <i class="f7-icons fullscreen-toggle" style="position: absolute; top: 10px; right: 15px; cursor: pointer">chevron_down</i>
                     {{else}}
-                        <i class="f7-icons fullscreen-toggle" style="position: absolute; top: 10px; right: 15px">chevron_up</i>
+                        <i class="f7-icons fullscreen-toggle" style="position: absolute; top: 10px; right: 15px; cursor: pointer">chevron_up</i>
                     {{/if}}
                     <div style="text-align: center;">
                         <img src="/icons/Logo512.png" style="width: 50%; max-width: 300px;">
