--- a/meteor/imports/ui/components/config/codes/index.html
+++ b/meteor/imports/ui/components/config/codes/index.html
@@ -30,25 +30,34 @@
                                         <!-- Divider -->
                                         <li class="item-divider">Stationslogins</li>
                                         <!-- Iterated Code Access-->
-                                        <li>
-                                            <div class="item-content">
-                                                <div class="item-inner">
-                                                    <div class="item-title">STATIONSNAME</div>
-                                                    <div class="item-after">Gallifrey666TARDIS</div>
-                                                </div>
-                                            </div>
-                                        </li>
+
+                                        {{#each l in login_stations}}
+                                            {{#with l}}
+                                                <li>
+                                                    <div class="item-content">
+                                                        <div class="item-inner">
+                                                            <div class="item-title">{{name}}</div>
+                                                            <div class="item-after">{{password}}</div>
+                                                        </div>
+                                                    </div>
+                                                </li>
+                                            {{/with}}
+                                        {{/each}}
                                         <!-- Divider -->
                                         <li class="item-divider">Gruppenlogins</li>
                                         <!-- Iterated Code Access -->
-                                        <li>
-                                            <div class="item-content">
-                                                <div class="item-inner">
-                                                    <div class="item-title">GRUPPENNAME</div>
-                                                    <div class="item-after">Master4444Doktor</div>
-                                                </div>
-                                            </div>
-                                        </li>
+                                        {{#each l in login_groups}}
+                                            {{#with l}}
+                                                <li>
+                                                    <div class="item-content">
+                                                        <div class="item-inner">
+                                                            <div class="item-title">{{name}}</div>
+                                                            <div class="item-after">{{password}}</div>
+                                                        </div>
+                                                    </div>
+                                                </li>
+                                            {{/with}}
+                                        {{/each}}
                                     </ul>
                                 </div>
                             </div>
@@ -61,12 +70,20 @@
                         <div class="row">
                             <div class="col-5"></div>
                             <div class="90">
-                                <!-- Button Print -->
-                                <p><a href="#" id="button_print" class="button button-fill button-big color-gray">Drucken</a>
+                                <!-- Button New -->
+                                <p><a href="#" id="btn-new-codes" class="button button-fill button-big color-green">
+                                    Neu Codes erstellen</a></p>
+                                <div style="text-align: center;">
+                                    <span id="progress-text">No accounts</span>
+                                </div>
+
+                                <p>
+                                    <span id="progress-bar" data-progress="10" class="progressbar"></span>
                                 </p>
-                                <!-- Button Export -->
-                                <p><a href="#" id="button_export" class="button button-fill button-big color-gray">als
-                                    PDF Exportieren</a></p>
+                                <!-- Button Print -->
+                                <p><a href="#" id="btn-print"
+                                      class="button button-fill button-big color-gray">Drucken</a>
+                                </p>
                             </div>
                             <div class="col-5"></div>
                         </div>
