Save competition before you start it

--- a/meteor/imports/ui/components/config/athletes/right/index.html
+++ b/meteor/imports/ui/components/config/athletes/right/index.html
@@ -8,7 +8,7 @@
                 <div class="navbar-inner">
                     <div class="left"></div>
                     <div class="center">Einstellungen des Athleten</div>
-                    <div class="right"></div>
+                    <div class="right"><a href="" id="link_save" class="link">Speichern</a></div>
                 </div>
             </div>
 
