--- a/meteor/imports/ui/components/config/codes/index.html
+++ b/meteor/imports/ui/components/config/codes/index.html
@@ -96,7 +96,7 @@
             <div class="toolbar">
                 <div class="toolbar-inner">
                     <a href="" class="item-link" id="link_back">Zurück</a>
-                    <a href="" class="item-link" id="link_save">Speichern</a>
+                    <a href="" class="item-link" id="link_start">Bundesjugendspiele starten</a>
                 </div>
             </div>
         </div>
