--- a/meteor/imports/ui/components/config/new_competition/main/index.html
+++ b/meteor/imports/ui/components/config/new_competition/main/index.html
@@ -7,7 +7,7 @@
                 <div class="navbar-inner">
                     <div class="left"></div>
                     <div class="center">Neuer Wettkampf</div>
-                    <div class="right"></div>
+                    <div class="right"><a href="" id="link_save" class="link">Speichern</a></div>
                 </div>
             </div>
 
@@ -43,7 +43,7 @@
 
             <div class="toolbar">
                 <div class="toolbar-inner">
-                    <a href="" id="link_back" class="link">Abbrechen</a>
+                    <a href="" id="link_back" class="link">Hauptmenü</a>
                     <a href="" id="link_next" class="link">Weiter</a>
                 </div>
             </div>
