Restrict access to collections

--- a/meteor/imports/ui/components/login/index.html
+++ b/meteor/imports/ui/components/login/index.html
@@ -52,7 +52,7 @@
 <template name="login_button">
     <div class="item-title label">{{name}}</div>
     <div class="item-input">
-        <input type="password" id="{{name}}_pwd" placeholder="{{name}}" data-name="{{name}}">
+        <input type="password" id="{{name}}_pwd" placeholder="Passwort" data-name="{{name}}">
     </div>
     {{#if processing}}
         {{>preloader}}
