--- a/meteor/imports/ui/components/config/codes/index.html
+++ b/meteor/imports/ui/components/config/codes/index.html
@@ -22,7 +22,7 @@
                         <div class="row">
                             <!-- Spacing -->
                             <div class="col-5"></div>
-                            <div class="col-90" id="printcontent">
+                            <div class="col-90">
                                 <!-- Codes in Spcing -->
                                 <div class="content-block-title">Zugangscodes</div>
                                 <div class="list-block">
@@ -90,6 +90,53 @@
                     </div>
                 </div>
             </div>
+
+            <div class="printcontent">
+                <div class="print-password-title">Stationslogins</div>
+                <table class="print-password-table">
+                    {{#each l in login_stations}}
+                        {{#with l}}
+                            <tr>
+                                <td class="print-password-field">{{name}}</td>
+                                <td class="print-password-field">{{password}}</td>
+                            </tr>
+                        {{/with}}
+                    {{/each}}
+                </table>
+                >
+            </div>
+            >
+            <!--<tr>-->
+            <!--<td>Alfreds Futterkiste</td>-->
+            <!--<td>Maria Anders</td>-->
+            <!--<td>Germany</td>-->
+            <!--</tr>-->
+            <!--<tr>-->
+            <!--<td>Centro comercial Moctezuma</td>-->
+            <!--<td>Francisco Chang</td>-->
+            <!--<td>Mexico</td>-->
+            <!--</tr>-->
+            <!--<tr>-->
+            <!--<td>Ernst Handel</td>-->
+            <!--<td>Roland Mendel</td>-->
+            <!--<td>Austria</td>-->
+            <!--</tr>-->
+            <!--<tr>-->
+            <!--<td>Island Trading</td>-->
+            <!--<td>Helen Bennett</td>-->
+            <!--<td>UK</td>-->
+            <!--</tr>-->
+            <!--<tr>-->
+            <!--<td>Laughing Bacchus Winecellars</td>-->
+            <!--<td>Yoshi Tannamuri</td>-->
+            <!--<td>Canada</td>-->
+            <!--</tr>-->
+            <!--<tr>-->
+            <!--<td>Magazzini Alimentari Riuniti</td>-->
+            <!--<td>Giovanni Rovelli</td>-->
+            <!--<td>Italy</td>-->
+            <!--</tr>-->
+            <!--</table>-->
 
 
             <!-- Toolbar -->
