Some changes to config ui.

--- a/meteor/imports/ui/components/config/athletes/right/index.html
+++ b/meteor/imports/ui/components/config/athletes/right/index.html
@@ -35,7 +35,8 @@
                                 <div class="item-inner">
                                     <div class="item-title label">Vorname</div>
                                     <div class="item-input">
-                                        <input type="text" disabled id="in-first-name" placeholder="Vorname">
+                                        <input type="text" class="athlete-input" disabled id="in-first-name"
+                                               placeholder="Vorname">
                                     </div>
                                 </div>
                             </div>
@@ -46,7 +47,8 @@
                                 <div class="item-inner">
                                     <div class="item-title label">Nachname</div>
                                     <div class="item-input">
-                                        <input type="text" disabled id="in-last-name" placeholder="Nachname">
+                                        <input type="text" class="athlete-input" disabled id="in-last-name"
+                                               placeholder="Nachname">
                                     </div>
                                 </div>
                             </div>
@@ -57,7 +59,8 @@
                                 <div class="item-inner">
                                     <div class="item-title label">Geb.-Jahr</div>
                                     <div class="item-input">
-                                        <input type="number" disabled id="in-year" placeholder="Jahr">
+                                        <input type="number" class="athlete-input" disabled id="in-year"
+                                               placeholder="Jahr">
                                     </div>
                                 </div>
                             </div>
@@ -68,7 +71,7 @@
                                 <div class="item-inner">
                                     <div class="item-title label">Geschlecht</div>
                                     <div class="item-input">
-                                        <select disabled id="pick-gender">
+                                        <select class="athlete-input" disabled id="pick-gender">
                                             <option>Männlich</option>
                                             <option>Weiblich</option>
                                         </select>
@@ -82,7 +85,7 @@
                                 <div class="item-inner">
                                     <div class="item-title label">Startklasse</div>
                                     <div class="item-input">
-                                        <select disabled id="pick-start_class"></select>
+                                        <select class="athlete-input" disabled id="pick-start_class"></select>
                                     </div>
                                 </div>
                             </div>
