Remove competition in edit mode

--- a/meteor/imports/ui/components/config/new_competition/main/index.html
+++ b/meteor/imports/ui/components/config/new_competition/main/index.html
@@ -38,6 +38,9 @@
                         </li>
                     </ul>
                 </div>
+                <p><a href="#" id="btn-remove-competition" style="width: 90%; margin-left: 5%;"
+                      class="button button-fill button-big color-red">Wettkampf löschen</a>
+                </p>
             </div>
 
 
